[project]
name = "codex-usage-dashboard"
version = "0.5.0"
description = "Local Codex token and cost dashboard with CC Switch and Codex session sources"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Codex Usage Dashboard Contributors" }]
keywords = ["codex", "cc-switch", "token-usage", "dashboard", "llm"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
]

[project.scripts]
codex-usage = "codex_usage_dashboard.cli:main"

[project.urls]
Homepage = "https://github.com/YUHAO-corn/codex-usage-dashboard"
Repository = "https://github.com/YUHAO-corn/codex-usage-dashboard"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["codex_usage_dashboard*"]
